# data-wrangling

data-wrangling/: README.md  pyproject.toml  sample.env
data-wrangling/app/: app.py
data-wrangling/data_wrangling/: __init__.py  config.py  constants.py  data_wrangling.py  development_database.db
data-wrangling/data_wrangling/blueprints/: __init__.py
data-wrangling/data_wrangling/blueprints/auth/: models.py  views.py
data-wrangling/data_wrangling/blueprints/auth/templates/auth/: login.html  signup.html
data-wrangling/data_wrangling/blueprints/main/: views.py
data-wrangling/data_wrangling/blueprints/main/templates/main/: index.html  profile.html
data-wrangling/data_wrangling/db/: data_wrangling.sql  db_setup.py
data-wrangling/data_wrangling/static/: styles.css
data-wrangling/data_wrangling/templates/: base.html  index.html  login.html  profile.html  signup.html
data-wrangling/data_wrangling/templates/layouts/: 404.html  base.html
data-wrangling/tests/: conftest.py  test_data_wrangling.py  test_user_flow.py
scrape-data/: .gitignore  README.md  pyproject.toml
scrape-data/scrape_data/: scrape_data.py
scrape-data/scrape_data/cpsdemographics/: scrapy.cfg
scrape-data/scrape_data/cpsdemographics/cpsdemographics/: items.py  middlewares.py  pipelines.py  settings.py
scrape-data/scrape_data/cpsdemographics/cpsdemographics/spiders/: CPSDemographics.py
scrape-data/scrape_data/cpsdemographics/files/: cpsdemographics-demographics.html
scrape-data/tests/: constants.py  test_scrape_data.py
