[tool.poetry]
name = "scrape-data"
version = "0.1.0"
description = ""
authors = ["carolisengineering <96889069+carolisengineering@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
